<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="heading_quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="_0" translatable="false">0</string>
    <string name="name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="thanks">Thank You!</string>
    <string name="quantity">Quantity: </string>
    <string name="total">Total: </string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="chocolate">Chocolate</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="name_hint">Name</string>
    <string name="toast_too_few">Too few coffes! Min. order is 1 coffee</string>
    <string name="toast_too_many">Too many coffes! Max. order is 100 coffees</string>
    <string name="subject">JustJava order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
