<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.bartekpawlowski.justjava.MainActivity"
    style="@style/scroll_view">

    <LinearLayout
        style="@style/activity_main">

        <EditText
            android:id="@+id/enter_name"
            style="@style/enter_name"
            android:hint="@string/name_hint"/>

        <TextView
            style="@style/text_views.heading"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/toppings_whipped_cream"
            style="@style/checkbox"
            android:text="@string/whipped_cream"/>

        <CheckBox
            android:id="@+id/toppings_chocolate"
            style="@style/checkbox"
            android:text="@string/chocolate"/>

        <TextView
            style="@style/text_views.heading"
            android:text="@string/heading_quantity"/>

        <LinearLayout
            style="@style/linear_layout_wrapper">

            <Button
                android:id="@+id/button_decrement"
                style="@style/button_small.decrement"
                android:text="@string/minus"
                android:onClick="decrementQuantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/text_views.quantity"
                android:text="@string/_0"/>

            <Button
                android:id="@+id/button_increment"
                style="@style/button_small.increment"
                android:text="@string/plus"
                android:onClick="incrementQuantity" />

        </LinearLayout>

        <Button
            style="@style/button"
            android:onClick="submitOrder"
            android:text="@string/order"/>

    </LinearLayout>

</ScrollView>
